safely disable class-specific types if the agent fails to install